--- a/border_properties.html
+++ b/border_properties.html
@@ -13,5 +13,10 @@
     <p class="b_prop1">A galaxy is a system of stars, stellar remnants, interstellar gas, dust, and dark matter bound together by gravity.[1][2] The word is derived from the Greek galaxias (γαλαξίας), literally 'milky', a reference to the Milky Way galaxy that contains the Solar System. Galaxies, averaging an estimated 100 million stars,[3] range in size from dwarfs with less than a thousand stars,[4] to the largest galaxies known – supergiants with one hundred trillion stars, each orbiting its galaxy's centre of mass. Most of the mass in a typical galaxy is in the form of dark matter, with only a few per cent of that mass visible in the form of stars and nebulae. Supermassive black holes are a common feature at the centres of galaxies.</p>
 
     <img class="b_prop2" src="images/2.jpg" alt="temp">
+    <img class="b_prop3" src="images/2.jpg" alt="temp">
+    <img class="b_prop4" src="images/2.jpg" alt="temp">
+    <img class="b_prop5" src="images/2.jpg" alt="temp">
+
+
 </body>
 </html>
