transform,simple_animation

--- a/transform.html
+++ b/transform.html
@@ -8,12 +8,29 @@
 </head>
 <body>
     <div class="container">
-        <div class="box box1"></div>
-        <div class="box box2"></div>
-        <div class="box box3"></div>
-        <div class="box box4"></div>
-        <div class="box box5"></div>
-        <div class="box box6"></div>
+        <div class="box box1">Translate X & Y</div>
+        <div class="box box2">Translate x</div>
+        <div class="box box3">Translate Y</div>
+        <div class="box box4">Rotate</div>
+        <div class="box box5">Skew x</div>
+        <div class="box box6">Skew Y</div>
+        <div class="box box7">Skew</div>
+        <div class="box box8">Scale</div>
+        <div class="box box9">Multiple</div>
+    </div><br><br><br><br>
+
+    <div class="img-wrapper1">
+        <img src="images/3.jpg" class="inner-img1" alt="image">
     </div>
+
+    <div class="img-wrapper2">
+        <img src="images/5.jpg" class="inner-img2" alt="image">
+    </div>
+
+    <div class="img-wrapper3">
+        <img src="images/2.jpg" class="inner-img3" alt="image">
+    </div>
+
+
 </body>
 </html>
